US2245 - minor alignment issue with form legend

--- a/app/assets/scss/components/_form.scss
+++ b/app/assets/scss/components/_form.scss
@@ -15,6 +15,7 @@
     fieldset {
         border: none;
         padding: 0;
+        margin-left: 0;
     }
 
     legend {
